# Agenitor

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
SKILLs/: architecture-design.md  backend-orchestration.md  software-design-patterns.md
Work/: what it is.md
app/: __init__.py  config.py  logging_config.py  main.py
app/api/: deps.py  ws.py
app/api/routes/: ai.py  assets.py  health.py  jobs.py  preview.py  projects.py  timeline.py
app/core/: __init__.py  bridge.py  events.py
app/core/commands/: __init__.py  timeline_commands.py
app/core/models/: __init__.py
app/db/: __init__.py  models.py  session.py
app/db/migrations/: env.py
app/lib/: event_bus.py
app/repositories/: __init__.py  asset_repository.py  project_repository.py  timeline_repository.py
app/schemas/: ir.py  jobs.py
app/services/: __init__.py  preview_service.py  project_service.py
app/services/ai/: agent.py  assets.py  strategy.py  tools.py  transcription.py  tts.py
app/workers/: __init__.py  celery_app.py  export_worker.py
bindings/: CMakeLists.txt  engine_module.cpp
docs/architecture/: architecture.md
engine/: CMakeLists.txt
engine/include/engine/: clip.hpp  export.hpp  ffmpeg_renderer.hpp  frame_grabber.hpp  renderer.hpp  timeline.hpp  track.hpp
engine/src/: clip.cpp  dummy_renderer.cpp  ffmpeg_renderer.cpp  frame_grabber.cpp  renderer.cpp  timeline.cpp  track.cpp
tests/: conftest.py  test_ai_agent.py  test_ai_assets.py  test_ai_tools.py  test_ai_transcription.py  test_architecture.py  test_health.py  test_ir_schemas.py  test_native_integration.py  test_timeline.py
