[project]
name = "ai-video-editor"
version = "0.1.0"
description = "AI-Native Video Editor - Backend Orchestration Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "websockets>=12.0",
    "ffmpeg-python>=0.2.0",
    "openai>=2.30.0",
    "litellm>=1.83.0",
    "elevenlabs>=2.41.0",
    "pybind11>=3.0.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cmake>=4.3.1",
    "pytest-archon>=0.0.7",
]
